app/src/db/repositories/setze/snapshots/anki_sentences__db__repositories__setze__setze_test__test_setze_repo__fetch__fetch_all_themas.snap
---
source: app/src/db/repositories/setze/setze_test.rs
expression: res
---
[
    "Thema 1",
    "Thema 2",
]
