app/src/db/repositories/setze/snapshots/anki_sentences__db__repositories__setze__setze_test__test_setze_repo__fetch__fetch_where_thema-4.snap
---
source: app/src/db/repositories/setze/setze_test.rs
expression: res
---
[
    Snapshot {
        id: 1,
        setze_spanisch: "Hola",
        setze_deutsch: "Hallo",
        niveau_id: NiveauSnapshot {
            id: 1,
            niveau: "A2",
            created_at: "<created_at>",
            deleted_at: "<deleted_at>",
        },
        thema: "Thema 1",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
]
