app/src/db/repositories/setze/snapshots/anki_sentences__db__repositories__setze__setze_test__test_setze_repo__fetch__fetch_where_thema-5.snap
---
source: app/src/db/repositories/setze/setze_test.rs
expression: res
---
[
    Snapshot {
        id: 2,
        setze_spanisch: "Adios",
        setze_deutsch: "Tschüss",
        schwirigkeit_id: SchwirigkeitListeSnapshot {
            id: 2,
            schwirigkeit: "Schwirig",
            created_at: "<created_at>",
            deleted_at: "<deleted_at>",
        },
        thema: "Thema 2",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
]
